# smc

./: .gitignore
smc/data/gui/fonts/: bluebold1024_medium.font
smc/data/gui/imagesets/: SMCLook256.imageset  TaharezLook.imageset
smc/data/gui/layouts/: box_question.layout  box_text.layout  debugtext.layout  default.layout  editor.layout  loading.layout  statictext.layout
smc/data/gui/layouts/level_settings/: main.layout  tab_background.layout  tab_global_effect.layout  tab_main.layout
smc/data/gui/layouts/menu/: main.layout  options_main.layout  start.layout  tab_audio.layout  tab_editor.layout  tab_game.layout  tab_joystick.layout  tab_keyboard.layout  tab_video.layout
smc/data/gui/looknfeels/: TaharezLook.looknfeel
smc/data/gui/schemes/: TaharezLook.scheme
smc/src/: CMakeLists.txt
smc/src/audio/: audio.cpp  audio.h  random_sound.cpp  random_sound.h  sound_manager.cpp  sound_manager.h
smc/src/cmake/: cegui-0-config.cmake  cegui-0-opengl-config.cmake  cegui-config.cmake  cegui-opengl-config.cmake  sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
smc/src/core/: camera.cpp  camera.h  campaign_manager.cpp  campaign_manager.h  collision.cpp  collision.h  editor.cpp  editor.h  file_parser.cpp  file_parser.h  framerate.cpp  framerate.h  game_core.cpp  game_core.h  global_basic.h  global_game.h  i18n.cpp  i18n.h  main.cpp  main.h  obj_manager.h  property_helper.cpp  property_helper.h  sprite_manager.cpp  sprite_manager.h
smc/src/core/filesystem/: filesystem.cpp  filesystem.h  resource_manager.cpp  resource_manager.h
smc/src/core/math/: line.h  point.h  rect.h  size.h  utilities.cpp  utilities.h  vector.cpp  vector.h
smc/src/enemies/: eato.cpp  eato.h  enemy.cpp  enemy.h  flyon.cpp  flyon.h  furball.cpp  furball.h  gee.cpp  gee.h  krush.cpp  krush.h  rokko.cpp  rokko.h  spika.cpp  spika.h  spikeball.cpp  spikeball.h  static.cpp  static.h  thromp.cpp  thromp.h  turtle.cpp  turtle.h
smc/src/enemies/bosses/: turtle_boss.cpp  turtle_boss.h
smc/src/gui/: generic.cpp  generic.h  hud.cpp  hud.h  menu.cpp  menu.h  menu_data.cpp  menu_data.h  spinner.cpp  spinner.h
smc/src/input/: joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
smc/src/level/: level.cpp  level.h  level_background.cpp  level_background.h  level_editor.cpp  level_editor.h  level_manager.cpp  level_manager.h  level_player.cpp  level_player.h  level_settings.cpp  level_settings.h
smc/src/net/: httpClient.cpp  httpClient.h
smc/src/objects/: animated_sprite.cpp  animated_sprite.h  ball.cpp  ball.h  bonusbox.cpp  bonusbox.h  box.cpp  box.h  enemystopper.cpp  enemystopper.h  goldpiece.cpp  goldpiece.h  level_entry.cpp  level_entry.h  level_exit.cpp  level_exit.h  moving_platform.cpp  moving_platform.h  movingsprite.cpp  movingsprite.h  path.cpp  path.h  powerup.cpp  powerup.h  spinbox.cpp  spinbox.h  sprite.cpp  sprite.h  star.cpp  star.h  text_box.cpp  text_box.h
smc/src/overworld/: overworld.cpp  overworld.h  world_editor.cpp  world_editor.h  world_layer.cpp  world_layer.h  world_manager.cpp  world_manager.h  world_player.cpp  world_player.h  world_sprite_manager.cpp  world_sprite_manager.h  world_waypoint.cpp  world_waypoint.h
smc/src/user/: preferences.cpp  preferences.h  savegame.cpp  savegame.h
smc/src/video/: animation.cpp  animation.h  color.h  font.cpp  font.h  gl_surface.cpp  gl_surface.h  img_manager.cpp  img_manager.h  img_settings.cpp  img_settings.h  renderer.cpp  renderer.h  video.cpp  video.h
